k8s/api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-api
spec:
  selector:
    matchLabels:
      app: kube-api
  template:
    metadata:
      labels:
        app: kube-api
    spec:
      containers:
      - name: kube-api
        image: afif1400/kube-api:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: kube-api-srv
spec:
  selector:
    app: kube-api
  ports:
   - port: 3000
     targetPort: 3000
     protocol: TCP
