k8s/system-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-manager-depl
spec:
  selector:
    matchLabels:
      app: system-manager
  template:
    metadata:
      labels:
        app: system-manager
    spec:
      containers:
      - name: system-manager
        image: afif1400/system-service
        resources:
          limits:
            memory: "500Mi"
            cpu: "600m"

---
apiVersion: v1
kind: Service
metadata:
  name: system-manager-srv
spec:
  type: LoadBalancer
  selector:
    app: system-manager
  ports:
    - name: system-manager
      protocol: TCP
      port: 5000
      targetPort: 5000
