k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: ingress-srv
spec:
  rules:
  - host: capstone.dev
    http:
      paths:
        - path: /api/*
          pathType: Prefix 
          backend:
            service:
              name: image-manager-srv
              port: 
                number: 5000
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: client-srv
              port:
                number: 3000
